feat: autodiscover tests methods